Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
 
 <hr>
 
-<p>JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  CDollar Technology  by    wilmix  jemin  j<br>
-   at  year  2014. Since   J2ee ,  Struts  ,Spring  ,JSF  fails   to interact  with  JDollar.  Since  Struts ,Spring  project size  will   not  fit  into  Wilmix  cat  server.  AND  JAVA1.0   is  the   Part  of  JITTECHSECTION-1.</p>
+<p>JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  CDollar Technology  by   </p>
+
+<p>wilmix  jemin  j   at  year  2014.  AND  JAVA1.0   is  the   Part  of  JITTECHSECTION-1.</p>
+
+<p>It   is   the   10th  Most  Advanced  technology.</p>
+
+<p>JAVA 1.0   is  greater  than   all  JAVA  versions JDk1.8  and  so on.</p>
 
 <p>SYNTAX  Of  JAVA1.0</p>
 
@@ -53,7 +58,7 @@
 
 <p>c)  IT's  compiles  and  run    the   Program   on  the  same  time.</p>
 
-<p>d) JAVA1.0   is  mostly  used   with  Sling v.1  os.</p>
+<p>d) JAVA1.0   is  mostly  used   with  GALAXY  os.</p>
 
 <p>e)  It   works  in  all   Unix  type  OS   and   Windows  Type  os.</p>
 
@@ -63,8 +68,25 @@
 
 <p>g)  JAVA1.0   Directly  interacts  with  Security  WDBAJ$  database.</p>
 
-<p>h)   Those   who  learn   JAVA1.0   can  easily   learn  JDollar.
- since   JDOLLAR1.0   And  JAVA1.0   are  brothers.</p>
+<p>h)   Those   who  learn   JAVA1.0   can  easily   learn  JDollar.</p>
+
+<p>i)  ANY  JAVA   professionals  can  easily   learn  JAVA1.0</p>
+
+<p>Note:  One   should  learn   CDollar  to  focus   on JAVA1.0  Technology.</p>
+
+<hr>
+
+<p>after   that  JAVA  Professionals   will  focus  on  JSHARP Technology</p>
+
+<p>of  JDollar  part2. Since  JAVA 1.0  cloud  computing   Technology - JSHARP</p>
+
+<p>is   already   implemented. SO  there  is  no need  for  additional server implementation</p>
+
+<p>for  JAVA1.0. And  JSHARP  uses  only  JAVA 1.0 compiler.</p>
+
+<p>JAVA 1.0  is  the Light   weighted   technology  than   JAVA technology.</p>
+
+<p>since   JDOLLAR1.0   And  JAVA1.0   are  brothers.</p>
 
 <p>Program-1:</p>
 
