Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Java1.0</h1>
-      <h2 class="project-tagline">   JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  CDollar Technology  by    wilmix  jemin  j  at  year  2014. </h2>
+      <h2 class="project-tagline">   JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  CDollar P.L  by    wilmix  jemin  j  at  year  2014. </h2>
       <a href="https://github.com/wilmixjemin8/JAVA1.0" class="btn">View on GitHub</a>
       <a href="https://github.com/wilmixjemin8/JAVA1.0/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wilmixjemin8/JAVA1.0/tarball/master" class="btn">Download .tar.gz</a>
