Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Java1.0</h1>
-      <h2 class="project-tagline">   JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  CDollar P.L  by    wilmix  jemin  j  at  year  2014. </h2>
+      <h2 class="project-tagline">   JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  JAS  and  WEB  P.L  by    wilmix  jemin  j  at  year  2014. </h2>
       <a href="https://github.com/wilmixjemin8/JAVA1.0" class="btn">View on GitHub</a>
       <a href="https://github.com/wilmixjemin8/JAVA1.0/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/wilmixjemin8/JAVA1.0/tarball/master" class="btn">Download .tar.gz</a>
@@ -24,9 +24,9 @@
 
 <hr>
 
-<p>JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  JAS and  CDolar P.L by    wilmix  jemin  j  </p>
+<p>JAVA 1.0   is  for  cloud computing  and  it   is    invented   in  JAS and  WEB P.L by    wilmix  jemin  j  </p>
 
-<p>at  year  2014.  AND  JAVA1.0   is  the   Part  SRGX Section.</p>
+<p>at  year  2014.  AND  JAVA1.0   is  the   Part  of  JITTECHSECTION-1.</p>
 
 <p>It   is   the   10th  Most  Advanced  programming Language.</p>
 
@@ -80,7 +80,7 @@
 
 <p>l)  It  Saves  Time  and  Cost...</p>
 
-<p>Note:  One   should  learn   CDollar  to  focus   on JAVA1.0  Programming Language.</p>
+<p>Note:  One   should  learn   WEB  to  focus   on JAVA1.0  Programming Language.</p>
 
 <hr>
 
@@ -127,7 +127,7 @@ JAVA.out.writeln("\t"+i);</p>
 
 <hr>
 
-<p>root@GALAXY:/media/D/WSITSOFTWARES/JAVAcloud1.1/JAVA1.0# JAVA1.0 abcwilmix.jav
+<p>JAVA1.0 abcwilmix.jav
 JAVA 1.0 -JIT Techsection1  Compiler Copy right  2014 C All  rights  reserved</p>
 
 <hr>
